# platformer_prototype

./: .clang-tidy  .devcontainer.json  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER_README.md  README.md  animation_config.json  character_config.json  config.json  developer_menu_settings.json  imgui.ini  untitled.tiled-session
.github/: copilot-instructions.md
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  static-analysis.yml
assets/characters/cat/: Cat Sprite Sheet.xcf  idle.xcf  jumping.xcf  walking.xcf
assets/levels/: test_level.tmj  test_level.tmx
assets/tiles/: ground.tsx  ground.xcf  rectangle.tsx  rectangle.xcf
src/: Animation.cpp  Animation.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  Character.cpp  Character.h  Config.h  DeveloperMenu.cpp  DeveloperMenu.h  GameSettingsObserver.cpp  GameSettingsObserver.h  Level.cpp  Level.h  LightGrid.cpp  LightGrid.h  Logging.h  Observer.h  Tile.cpp  Tile.h  Utils.cpp  Utils.h  main.cpp
tests/: CMakeLists.txt  mock_sdl.h  test_build_options.cpp  test_command_line_args.cpp  test_error_handling.cpp  test_main.cpp
tests/unit/: test_main.cpp
